[package]
name = "rust-parser"
version = "0.1.0"
authors = ["Dayton J Allen <daytonjallen@gmail.com>"]
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unicode"]
std = []
unicode = ["unicode-perl"]
unicode-perl = ["regex-syntax/unicode-perl"]
[dependencies]

# For very fast prefix literal matching.
[dependencies.aho-corasick]
version = "0.7.6"

# For skipping along search text quickly when a leading byte is known.
[dependencies.memchr]
version = "2.2.1"

[dependencies.regex-syntax]
version = "0.6.12"
default-features = false

[lib]
name = "regexcompiler"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.4"
features = ["extension-module"]

