[package]
name = "rust"
version = "0.1.0"
authors = ["Dayton J Allen <daytonjallen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"

[dependencies.regex]
version = "1"
default-features = false
features = ["std", "unicode", "perf"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false